--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 body , html{
   margin: 0;
