--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 body , html{
   margin: 0;
@@ -16,7 +12,9 @@ html{
   overflow-x: hidden;
 }
 
-
+h1{
+  font-size: 20px !important;
+}
 .navbar{
   background-color:black !important;
   border-radius: 0px !important;
