--- a/client/src/Components/Comments/Comment/comment.css
+++ b/client/src/Components/Comments/Comment/comment.css
@@ -7,15 +7,18 @@
     background-color: white;
     position: relative;
     z-index: 10;
+    transition-duration: 0.4s;
 }
 
-.comment-container{
+.comment-card:hover {
+    background-color: rgba(255, 255, 255, 0.582);
+    transition-duration: 0.4s;
 }
 
 .comment-rating{
     display: flex;
     justify-content: end;
-    background-color: white;
+    background-color: transparent;
 }
 
 .comment-text{
@@ -29,6 +32,7 @@
     font-size: smaller;
     padding: 0px 5px;
     position: absolute;
+    border-radius: 12px;
     top: -20%;
     margin-left: 10px;
     z-index: 20;
