--- a/client/src/Components/Comments/Comment/comment.css
+++ b/client/src/Components/Comments/Comment/comment.css
@@ -1,4 +1,5 @@
 .comment-card{
+    position: relative;
     border-style: solid;
     border-width: 1px;
     border-radius: 12px;
@@ -7,6 +8,7 @@
     background-color: white;
     position: relative;
     z-index: 10;
+    margin-left: 12px;
     transition-duration: 0.4s;
 }
 
@@ -34,6 +36,22 @@
     position: absolute;
     border-radius: 12px;
     top: -20%;
-    margin-left: 10px;
+    margin-left: 13px;
     z-index: 20;
+}
+
+.comment-image{
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    font-weight: 600;
+    color: white;
+    position: absolute;
+    top: -17px;
+    left: -12px;
 }
