--- a/client/src/Components/Comments/Comment/comment.css
+++ b/client/src/Components/Comments/Comment/comment.css
@@ -8,10 +8,7 @@
     background-color: white;
     position: relative;
     z-index: 10;
-<<<<<<< HEAD
     margin-left: 12px;
-=======
->>>>>>> 9ad8af8 (changed styles)
     transition-duration: 0.4s;
 }
 
@@ -54,18 +51,15 @@
     font-size: smaller;
     font-weight: 600;
     padding: 0px 5px;
-<<<<<<< HEAD
     position: relative;
     border-radius: 12px;
     padding-bottom: -12px;
     top: -13px;
     left: 12px;
-=======
     position: absolute;
     border-radius: 12px;
     top: -20%;
     margin-left: 10px;
->>>>>>> 9ad8af8 (changed styles)
     z-index: 20;
 }
 
@@ -110,3 +104,19 @@
     transition-duration: 0.3s;
 }
 
+
+.comment-image{
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    height: 35px;
+    width: 35px;
+    font-weight: 600;
+    color: white;
+    position: absolute;
+    top: -17px;
+    left: -12px;
+}
