--- a/client/src/Components/Comments/Comment/comment.css
+++ b/client/src/Components/Comments/Comment/comment.css
@@ -3,7 +3,7 @@
     border-style: solid;
     border-width: 1px;
     border-radius: 12px;
-    padding: 10px;
+    padding: 0px 10px;
     min-width: 400px;
     background-color: white;
     position: relative;
@@ -24,20 +24,10 @@
 }
 
 .comment-text{
-    margin: 10px;
+    margin: 2px 0px;
     font-size: small;
+    display: flex;
     color: rgb(24, 24, 24);
-}
-
-.comment-username{
-    background-color: white;
-    font-size: smaller;
-    padding: 0px 5px;
-    position: absolute;
-    border-radius: 12px;
-    top: -20%;
-    margin-left: 13px;
-    z-index: 20;
 }
 
 .comment-image{
@@ -55,3 +45,58 @@
     top: -17px;
     left: -12px;
 }
+
+.comment-username{
+    background-color: white;
+    font-size: smaller;
+    font-weight: 600;
+    padding: 0px 5px;
+    position: relative;
+    border-radius: 12px;
+    padding-bottom: -12px;
+    top: -13px;
+    left: 12px;
+    z-index: 20;
+}
+
+.button-section{
+    position: relative;
+    bottom: -13px;
+    display: flex;
+    justify-content: end;
+}
+
+.cs-icon{
+    background-color: white;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 50%;
+    margin: 0px 4px;
+    cursor: pointer;
+}
+
+.delete{
+    color: rgb(207, 41, 0);
+    transition-duration: 0.3s;
+}
+
+.edit{
+    color: rgb(255, 166, 0);
+    transition-duration: 0.3s;
+}
+
+.delete:hover{
+    color: rgb(223, 92, 60);
+    transition-duration: 0.3s;
+}
+
+.edit:hover{
+    color: rgb(255, 191, 73);
+    transition-duration: 0.3s;
+}
+
